--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
  
 </head>
 <body>
+  <div class="land">
   <img class="top" src="images/bg-pattern-top.svg" alt="">
   <img class="bottom" src="images/bg-pattern-bottom.svg" alt="">
   <div class="card">
@@ -38,9 +39,10 @@
       <span class="photo">Photos</span>
     </div>
   </div>
-  <!-- <div class="attribution">
+</div>
+  <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">haaamed</a>.
-  </div> -->
+  </div> 
 </body>
 </html>
